# bio-benchmark

./: .env.example  .gitignore  LICENSE  README.md  benchmark.example.yml  benchmark.yml  main.py  pyproject.toml
.github/workflows/: pages.yml
docs/: app.js  index.html  styles.css
docs/data/: benchmark_summary.json
docs/data/results/: phylobiobixbench-verified-50-20260224-190546.csv  phylobiobixbench-verified-50-20260224-224841.csv  phylobiobixbench-verified-50-20260225-085809.csv
scripts/: build_pages_data.py
src/bio_benchmark/: __init__.py  agent.py  cli.py  config.py  dataset_setup.py  judge.py  runner.py  template.py
src/bio_benchmark/strategies/: __init__.py  base.py  bixbench.py  bixbench_dataset.py
